--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx
+  name: hello-world-python
   namespace: default
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
-      app: nginx
+      app: hello-world-python
   template:
     metadata:
       labels:
-        app: nginx
+        app: hello-world-python
     spec:
       containers:
-      - name: nginx
-        image: nginx:latest
-        ports:
-        - containerPort: 80
+        - name: hello-world-python
+          image: geetha8500/hello-world-python:latest  # Will be updated by Jenkins
+          ports:
+            - containerPort: 5000
