--- a/manifests/service.yml
+++ b/manifests/service.yml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-service
+  name: hello-world-python
   namespace: default
 spec:
-  type: NodePort  # Change to NodePort if not using a cloud provider
   selector:
-    app: nginx
+    app: hello-world-python
   ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 80
+    - protocol: TCP
+      port: 80
+      targetPort: 5000
+  type: ClusterIP
